--- a/src/files/css/template.css
+++ b/src/files/css/template.css
@@ -1,5 +1,5 @@
 html, body {
-	max-width: 320px;
+	max-width: 640px;
 }
 .expand {
 	cursor: pointer;
@@ -60,3 +60,11 @@ body .home-withdrawal
 .home-debit .home-debit,
 .home-withdrawal .home-withdrawal
 {display: block !important;}
+
+.on .off {
+	display: none;
+}
+
+.off .on {
+	display: none;
+}
